--- a/requirements.txt
+++ b/requirements.txt
@@ -1,197 +1,280 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
-_ipyw_jlab_nb_ext_conf=0.1.0=py38_0
-anaconda-client=1.8.0=py38hecd8cb5_0
-anaconda-navigator=1.10.0=py38_0
-anyio=2.2.0=py38hecd8cb5_1
-appnope=0.1.2=py38hecd8cb5_1001
-argon2-cffi=20.1.0=py38h9ed2024_1
-async_generator=1.10=pyhd3eb1b0_0
-attrs=21.2.0=pyhd3eb1b0_0
-babel=2.9.1=pyhd3eb1b0_0
-backcall=0.2.0=pyhd3eb1b0_0
-backports=1.0=pyhd3eb1b0_2
-backports.functools_lru_cache=1.6.4=pyhd3eb1b0_0
-backports.tempfile=1.0=pyhd3eb1b0_1
-backports.weakref=1.0.post1=py_1
-beautifulsoup4=4.9.3=pyhb0f4dca_0
-blas=1.0=mkl
-bleach=3.3.1=pyhd3eb1b0_0
-blinker=1.4=pypi_0
-boto3=1.18.21=pyhd3eb1b0_0
-botocore=1.21.41=pyhd3eb1b0_1
-bottleneck=1.3.2=py38hf1fa96c_1
-brotlipy=0.7.0=py38h9ed2024_1003
-bzip2=1.0.8=h1de35cc_0
-ca-certificates=2021.10.26=hecd8cb5_2
-cairo=1.14.12=hc4e6be7_4
-certifi=2021.10.8=py38hecd8cb5_0
-cffi=1.14.0=py38hb5b8e2f_0
-chardet=4.0.0=py38hecd8cb5_1003
-click=8.0.1=pyhd3eb1b0_0
-clyent=1.2.2=py38_1
-conda=4.11.0=py38hecd8cb5_0
-conda-build=3.20.5=py38_1
-conda-env=2.6.0=1
-conda-package-handling=1.7.3=py38h9ed2024_1
-conda-verify=3.4.2=py_1
-cryptography=3.4.7=py38h2fd3fbb_0
-cycler=0.10.0=pypi_0
-dbus=1.13.18=h18a8e69_0
-decorator=5.0.9=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-entrypoints=0.3=py38_0
-et-xmlfile=1.1.0=pypi_0
-expat=2.4.1=h23ab428_2
-filelock=3.0.12=pyhd3eb1b0_1
-flake8=3.9.2=pyhd3eb1b0_0
-fontconfig=2.13.1=ha9ee91d_0
-freetype=2.10.4=ha233b18_0
-fribidi=1.0.10=haf1e3a3_0
-future=0.18.2=py38_1
-gettext=0.21.0=h7535e17_0
-glib=2.63.1=hd977a24_0
-glob2=0.7=pyhd3eb1b0_0
-graphite2=1.3.14=h38d11af_0
-graphviz=2.40.1=hefbbd9a_2
-harfbuzz=1.8.8=hb8d4a28_0
-html5lib=1.1=py_0
-httpbin=0.7.0=pypi_0
-icu=58.2=h0a44026_3
-idna=2.10=pyhd3eb1b0_0
-imageio=2.9.0=pypi_0
-importlib-metadata=3.10.0=py38hecd8cb5_0
-importlib_metadata=3.10.0=hd3eb1b0_0
-intel-openmp=2021.3.0=hecd8cb5_3375
-ipykernel=5.3.4=py38h5ca1d4c_0
-ipython=7.22.0=py38h01d92e1_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-ipywidgets=7.6.3=pyhd3eb1b0_1
-jedi=0.17.0=py38_0
-jinja2=2.11.3=pyhd3eb1b0_0
-jmespath=0.10.0=pyhd3eb1b0_0
-joblib=1.1.0=pypi_0
-jpeg=9b=he5867d9_2
-json5=0.9.6=pyhd3eb1b0_0
-jsonschema=3.2.0=py_2
-jupyter-packaging=0.7.12=pyhd3eb1b0_0
-jupyter_client=6.1.12=pyhd3eb1b0_0
-jupyter_core=4.7.1=py38hecd8cb5_0
-jupyter_server=1.4.1=py38hecd8cb5_0
-jupyterlab=3.0.14=pyhd3eb1b0_1
-jupyterlab-vim=0.14.5=pypi_0
-jupyterlab_pygments=0.1.2=py_0
-jupyterlab_server=2.6.1=pyhd3eb1b0_0
-jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-kiwisolver=1.3.2=pypi_0
-lckr-jupyterlab-variableinspector=3.0.9=pypi_0
-lcms2=2.12=hf1fd2bf_0
-libarchive=3.4.2=haa3ed63_0
-libcxx=10.0.0=1
-libffi=3.2.1=h0a44026_1007
-libiconv=1.16=h1de35cc_0
-liblief=0.10.1=h0a44026_0
-libpng=1.6.37=ha441bb4_0
-libsodium=1.0.18=h1de35cc_0
-libtiff=4.2.0=h87d7836_0
-libwebp-base=1.2.0=h9ed2024_0
-libxml2=2.9.12=hcdb78fc_0
-llvm-openmp=10.0.0=h28b9765_0
-lz4-c=1.9.3=h23ab428_0
-markupsafe=2.0.1=py38h9ed2024_0
-matplotlib=3.4.3=pypi_0
-mccabe=0.6.1=py38_1
-mglearn=0.1.9=pypi_0
-mistune=0.8.4=py38h1de35cc_1001
-mkl=2021.3.0=hecd8cb5_517
-mkl-service=2.4.0=py38h9ed2024_0
-mkl_fft=1.3.0=py38h4a7008c_2
-mkl_random=1.2.2=py38hb2f4e1b_0
-navigator-updater=0.2.1=py38_0
-nbclassic=0.2.6=pyhd3eb1b0_0
-nbclient=0.5.3=pyhd3eb1b0_0
-nbconvert=6.1.0=py38hecd8cb5_0
-nbformat=5.1.3=pyhd3eb1b0_0
-ncurses=6.2=h0a44026_1
-nest-asyncio=1.5.1=pyhd3eb1b0_0
-notebook=6.4.0=py38hecd8cb5_0
-numexpr=2.7.3=py38h5873af2_1
-numpy=1.20.3=py38h4b4dc7a_0
-numpy-base=1.20.3=py38he0bd621_0
-olefile=0.46=py_0
-openjpeg=2.3.0=hb95cd4c_1
-openpyxl=3.0.9=pypi_0
-openssl=1.1.1l=h9ed2024_0
-packaging=21.0=pyhd3eb1b0_0
-pandas=1.3.1=py38h5008ddb_0
-pandocfilters=1.4.3=py38hecd8cb5_1
-pango=1.42.4=h7e27002_1
-parso=0.8.2=pyhd3eb1b0_0
-pcre=8.45=h23ab428_0
-pexpect=4.8.0=pyhd3eb1b0_3
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=8.3.1=py38ha4cf6ea_0
-pip=21.1.3=py38hecd8cb5_0
-pixman=0.40.0=h9ed2024_1
-pkginfo=1.7.1=py38hecd8cb5_0
-prometheus_client=0.11.0=pyhd3eb1b0_0
-prompt-toolkit=3.0.17=pyh06a4308_0
-psutil=5.8.0=py38h9ed2024_1
-ptyprocess=0.7.0=pyhd3eb1b0_2
-py-lief=0.10.1=py38haf313ee_0
-pycodestyle=2.7.0=pyhd3eb1b0_0
-pycosat=0.6.3=py38h1de35cc_1
-pycparser=2.20=py_2
-pyflakes=2.3.1=pyhd3eb1b0_0
-pygments=2.9.0=pyhd3eb1b0_0
-pyopenssl=20.0.1=pyhd3eb1b0_1
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyqt=5.9.2=py38h655552a_2
-pyrsistent=0.17.3=py38haf1e3a3_0
-pysocks=1.7.1=py38_1
-python=3.8.2=hc70fcce_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-graphviz=0.17=pypi_0
-python-libarchive-c=2.9=pyhd3eb1b0_1
-python.app=2=py38_10
-pytz=2021.1=pyhd3eb1b0_0
-pyyaml=5.4.1=py38h9ed2024_1
-pyzmq=20.0.0=py38h23ab428_1
-qt=5.9.7=h468cd18_1
-qtpy=1.9.0=py_0
-raven=6.10.0=pypi_0
-readline=8.1=h9ed2024_0
-requests=2.25.1=pyhd3eb1b0_0
-ripgrep=12.1.1=0
-ruamel_yaml=0.15.100=py38h9ed2024_0
-s3transfer=0.5.0=pyhd3eb1b0_0
-scikit-learn=1.0=pypi_0
-scipy=1.7.1=pypi_0
-send2trash=1.5.0=pyhd3eb1b0_1
-setuptools=52.0.0=py38hecd8cb5_0
-sip=4.19.8=py38h0a44026_0
-six=1.16.0=pyhd3eb1b0_0
-sniffio=1.2.0=py38hecd8cb5_1
-soupsieve=2.2.1=pyhd3eb1b0_0
-sqlite=3.36.0=hce871da_0
-terminado=0.9.4=py38hecd8cb5_0
-testpath=0.5.0=pyhd3eb1b0_0
-threadpoolctl=3.0.0=pypi_0
-tk=8.6.10=hb0a8c7a_0
-tornado=6.1=py38h9ed2024_0
-tqdm=4.61.2=pyhd3eb1b0_1
-traitlets=5.0.5=pyhd3eb1b0_0
-urllib3=1.26.6=pyhd3eb1b0_1
-wcwidth=0.2.5=py_0
-webencodings=0.5.1=py38_1
-wheel=0.36.2=pyhd3eb1b0_0
-widgetsnbextension=3.5.1=py38_0
-xlrd=2.0.1=pypi_0
-xmltodict=0.12.0=py_0
-xz=5.2.5=h1de35cc_0
-yaml=0.2.5=haf1e3a3_0
-zeromq=4.3.4=h23ab428_0
-zipp=3.5.0=pyhd3eb1b0_0
-zlib=1.2.11=h1de35cc_3
-zstd=1.4.9=h322a384_0
+abseil-cpp=20211102.0=h96cf925_1
+alembic=1.8.1=pyhd8ed1ab_0
+altair=4.2.0=pyhd8ed1ab_1
+anyio=3.6.2=pyhd8ed1ab_0
+appnope=0.1.3=pyhd8ed1ab_0
+argon2-cffi=21.3.0=pyhd8ed1ab_0
+argon2-cffi-bindings=21.2.0=py39h63b48b0_2
+arrow-cpp=8.0.0=py39had1886b_0
+asttokens=2.0.8=pyhd8ed1ab_0
+atk-1.0=2.36.0=he69c4ee_4
+attrs=22.1.0=pyh71513ae_1
+autopage=0.5.1=pyhd8ed1ab_0
+autopep8=1.6.0=pyhd3eb1b0_1
+aws-c-common=0.4.57=hb1e8313_1
+aws-c-event-stream=0.1.6=h23ab428_5
+aws-checksums=0.1.9=hb1e8313_0
+aws-sdk-cpp=1.8.185=he271ece_0
+babel=2.10.3=pyhd8ed1ab_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+beautifulsoup4=4.11.1=pyha770c72_0
+blas=1.0=openblas
+bleach=5.0.1=pyhd8ed1ab_0
+blinker=1.5=pyhd8ed1ab_0
+boost=1.74.0=py39ha1f3e3e_5
+boost-cpp=1.74.0=h8b082ac_8
+boruta_py=0.3=py_0
+brotli=1.0.9=h5eb16cf_7
+brotli-bin=1.0.9=h5eb16cf_7
+brotlipy=0.7.0=py39h63b48b0_1004
+bzip2=1.0.8=h0d85af4_4
+c-ares=1.18.1=h0d85af4_0
+ca-certificates=2022.10.11=hecd8cb5_0
+cachetools=5.2.0=pyhd8ed1ab_0
+cairo=1.16.0=h904041c_1014
+certifi=2022.12.7=py39hecd8cb5_0
+cffi=1.15.1=py39h131948b_1
+charset-normalizer=2.1.1=pyhd8ed1ab_0
+click=8.1.3=unix_pyhd8ed1ab_2
+cliff=4.1.0=pyhd8ed1ab_0
+cmaes=0.9.0=pyhd8ed1ab_0
+cmd2=2.4.2=py39h6e9494a_2
+colorama=0.4.6=pyhd8ed1ab_0
+colorlog=6.7.0=py39h6e9494a_1
+colour=0.1.5=py_0
+commonmark=0.9.1=py_0
+contourpy=1.0.5=py39h92daf61_0
+cryptography=38.0.1=py39hf6deb26_0
+cycler=0.11.0=pyhd8ed1ab_0
+dataclasses=0.8=pyhc8e2a94_3
+dcekit=2.10.5=pypi_0
+debugpy=1.6.3=py39hd91caee_0
+decorator=5.1.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+dtreeviz=1.4.0=pyh050c7b8_0
+entrypoints=0.4=pyhd8ed1ab_0
+et_xmlfile=1.0.1=py_1001
+exceptiongroup=1.0.0=pyhd8ed1ab_0
+executing=1.1.1=pyhd8ed1ab_0
+expat=2.4.9=hf0c8a7f_0
+fftw=3.3.9=h9ed2024_1
+flit-core=3.7.1=pyhd8ed1ab_0
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=hab24e00_0
+fontconfig=2.14.0=h5bb23bf_1
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.37.4=py39ha30fb19_0
+freetype=2.12.1=h3f81eb7_0
+fribidi=1.0.10=hbcb3906_0
+future=0.18.2=pyhd8ed1ab_6
+gdk-pixbuf=2.42.8=h3648f77_1
+gettext=0.19.8.1=h8a4c099_1009
+gflags=2.2.2=hb1e8313_1004
+giflib=5.2.1=hbcb3906_2
+gitdb=4.0.10=pyhd8ed1ab_0
+gitpython=3.1.29=pyhd8ed1ab_0
+glog=0.6.0=h8ac2a54_0
+graphite2=1.3.13=h2e338ed_1001
+graphviz=6.0.1=ha8464fc_0
+greenlet=1.1.3=py39h7a8716b_0
+grpc-cpp=1.46.1=h067a048_0
+gtk2=2.24.33=h7c1209e_2
+gts=0.7.6=hccb3bdf_2
+harfbuzz=5.3.0=h08f8713_0
+icu=70.1=h96cf925_0
+idna=3.4=pyhd8ed1ab_0
+importlib-metadata=4.11.4=py39h6e9494a_0
+importlib_metadata=4.11.4=hd8ed1ab_0
+importlib_resources=5.10.0=pyhd8ed1ab_0
+iniconfig=1.1.1=pyh9f0ad1d_0
+ipykernel=6.16.1=pyh736e0ef_0
+ipython=8.5.0=pyhd1c38e8_1
+ipython_genutils=0.2.0=py_1
+ipywidgets=8.0.3=pyhd8ed1ab_0
+jedi=0.18.1=pyhd8ed1ab_2
+jinja2=3.1.2=pyhd8ed1ab_1
+joblib=1.1.0=pyhd3eb1b0_0
+jpeg=9e=hac89ed1_2
+json5=0.9.5=pyh9f0ad1d_0
+jsonschema=4.16.0=pyhd8ed1ab_0
+jupyter_client=7.4.3=pyhd8ed1ab_0
+jupyter_core=4.11.1=py39h6e9494a_0
+jupyter_server=1.21.0=pyhd8ed1ab_0
+jupyterlab=3.4.8=pyhd8ed1ab_0
+jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+jupyterlab_server=2.16.1=pyhd8ed1ab_0
+jupyterlab_widgets=3.0.4=pyhd8ed1ab_0
+keras=2.6.0=pyhd3eb1b0_0
+kiwisolver=1.4.4=py39h7c694c3_0
+krb5=1.20.1=h0165f36_0
+lcms2=2.12=h577c468_0
+lerc=4.0.0=hb486fe8_0
+libblas=3.9.0=16_osx64_openblas
+libbrotlicommon=1.0.9=h5eb16cf_7
+libbrotlidec=1.0.9=h5eb16cf_7
+libbrotlienc=1.0.9=h5eb16cf_7
+libcblas=3.9.0=16_osx64_openblas
+libcurl=7.86.0=haf73cf8_2
+libcxx=14.0.6=hccf4f1f_0
+libdeflate=1.14=hb7f2c08_0
+libedit=3.1.20191231=h0678c8f_2
+libev=4.33=haf1e3a3_1
+libevent=2.1.10=h815e4d9_4
+libffi=3.4.2=h0d85af4_5
+libgd=2.3.3=h1e214de_3
+libgfortran=5.0.0=10_4_0_h97931a8_25
+libgfortran5=11.3.0=h082f757_25
+libglib=2.74.0=h3ba3332_0
+libiconv=1.17=hac89ed1_0
+liblapack=3.9.0=16_osx64_openblas
+libnghttp2=1.47.0=h7cbc4dc_1
+libopenblas=0.3.21=openmp_h429af6e_3
+libpng=1.6.38=ha978bb4_0
+libprotobuf=3.20.1=h8346a28_0
+librsvg=2.54.4=h3d48ba6_0
+libsodium=1.0.18=hbcb3906_1
+libsqlite=3.39.3=ha978bb4_0
+libssh2=1.10.0=h7535e13_3
+libthrift=0.15.0=h054ceb0_0
+libtiff=4.4.0=hdb44e8a_4
+libtool=2.4.6=he49afe7_1008
+libwebp=1.2.4=hfa4350a_0
+libwebp-base=1.2.4=h775f41a_0
+libxcb=1.13=h0d85af4_1004
+libxml2=2.9.14=hea49891_4
+libzlib=1.2.13=hfd90126_4
+lightgbm=3.3.3=py39hc23ddd4_1
+llvm-openmp=14.0.4=ha654fa7_0
+lz4-c=1.9.3=he49afe7_1
+mako=1.2.4=pyhd8ed1ab_0
+markupsafe=2.1.1=py39h63b48b0_1
+matplotlib-base=3.6.0=py39hb2f573b_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mistune=2.0.4=pyhd8ed1ab_0
+mordred=1.2.0=pyhe5148d4_0
+munkres=1.1.4=pyh9f0ad1d_0
+nbclassic=0.4.7=pyhd8ed1ab_0
+nbclient=0.7.0=pyhd8ed1ab_0
+nbconvert=7.2.2=pyhd8ed1ab_0
+nbconvert-core=7.2.2=pyhd8ed1ab_0
+nbconvert-pandoc=7.2.2=pyhd8ed1ab_0
+nbformat=5.7.0=pyhd8ed1ab_0
+ncurses=6.3=h96cf925_1
+nest-asyncio=1.5.6=pyhd8ed1ab_0
+networkx=2.8.4=py39hecd8cb5_0
+notebook=6.3.0=py39h6e9494a_0
+notebook-shim=0.2.0=pyhd8ed1ab_0
+numpy=1.23.3=py39h34843a6_0
+openjpeg=2.5.0=h5d0d7b0_1
+openpyxl=3.0.10=py39ha30fb19_2
+openssl=1.1.1s=hca72f7f_0
+optuna=2.10.1=pyhd8ed1ab_0
+orc=1.7.4=h9274d09_0
+packaging=21.3=pyhd8ed1ab_0
+pandas=1.5.0=py39hecff1ad_0
+pandoc=2.19.2=h694c41f_0
+pandocfilters=1.5.0=pyhd8ed1ab_0
+pango=1.50.11=h7fca291_0
+parso=0.8.3=pyhd8ed1ab_0
+pbr=5.11.0=pyhd8ed1ab_0
+pcre2=10.37=h3f55489_1
+pexpect=4.8.0=pyh9f0ad1d_2
+pickleshare=0.7.5=py_1003
+pillow=9.0.1=py39hde71d04_0
+pip=22.2.2=pyhd8ed1ab_0
+pixman=0.40.0=hbcb3906_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+pluggy=1.0.0=pyhd8ed1ab_5
+prettytable=3.5.0=pyhd8ed1ab_0
+prometheus_client=0.15.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.31=pyha770c72_0
+protobuf=3.20.1=py39he9d5cce_0
+psutil=5.9.3=py39ha30fb19_0
+pthread-stubs=0.4=hc929b4f_1001
+ptyprocess=0.7.0=pyhd3deb0d_0
+pubchempy=1.0.4=pyh864c0ab_2
+pure_eval=0.2.2=pyhd8ed1ab_0
+pyarrow=8.0.0=py39h2202ef3_0
+pycairo=1.21.0=py39ha25c624_1
+pycodestyle=2.8.0=pyhd3eb1b0_0
+pycparser=2.21=pyhd8ed1ab_0
+pydeck=0.7.1=py39hecd8cb5_0
+pygments=2.13.0=pyhd8ed1ab_0
+pympler=1.0.1=pyhd8ed1ab_0
+pyopenssl=22.1.0=pyhd8ed1ab_0
+pyparsing=3.0.9=pyhd8ed1ab_0
+pyperclip=1.8.2=pyhd8ed1ab_2
+pyrsistent=0.18.1=py39h63b48b0_1
+pysocks=1.7.1=pyha2e5f31_6
+pytest=7.2.0=pyhd8ed1ab_2
+python=3.9.15=h218abb5_2
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-fastjsonschema=2.16.2=pyhd8ed1ab_0
+python-graphviz=0.20.1=pyh22cad53_0
+python-tzdata=2022.7=pyhd8ed1ab_0
+python_abi=3.9=2_cp39
+pytz=2022.2.1=pyhd8ed1ab_0
+pytz-deprecation-shim=0.1.0.post0=py39h6e9494a_3
+pyyaml=6.0=py39ha30fb19_5
+pyzmq=24.0.1=py39hed8f129_0
+rdkit=2022.03.5=py39hc2aa9ed_0
+re2=2022.04.01=h96cf925_0
+readline=8.1.2=h3899abd_0
+reportlab=3.5.68=py39hf37cc50_1
+requests=2.28.1=pyhd8ed1ab_1
+rich=12.6.0=pyhd8ed1ab_0
+scikit-learn=1.0.2=py39hae1ba45_1
+scipy=1.9.3=py39h1d874dc_0
+seaborn=0.12.0=py39hecd8cb5_0
+semver=2.13.0=pyh9f0ad1d_0
+send2trash=1.8.0=pyhd8ed1ab_0
+setuptools=65.4.0=pyhd8ed1ab_0
+six=1.16.0=pyh6c4a22f_0
+smmap=3.0.5=pyh44b312d_0
+snappy=1.1.9=h225ccf5_2
+sniffio=1.3.0=pyhd8ed1ab_0
+soupsieve=2.3.2.post1=pyhd8ed1ab_0
+sqlalchemy=1.4.41=py39ha30fb19_0
+sqlite=3.40.0=h880c91c_0
+stack_data=0.5.1=pyhd8ed1ab_0
+stevedore=4.1.1=pyhd8ed1ab_0
+streamlit=1.16.0=pyhd8ed1ab_0
+terminado=0.16.0=pyhd1c38e8_0
+threadpoolctl=2.2.0=pyh0d69192_0
+tinycss2=1.2.1=pyhd8ed1ab_0
+tk=8.6.12=h5dbffcc_0
+toml=0.10.2=pyhd8ed1ab_0
+tomli=2.0.1=pyhd8ed1ab_0
+toolz=0.12.0=pyhd8ed1ab_0
+tornado=6.2=py39h701faf5_0
+tqdm=4.64.1=py39hecd8cb5_0
+traitlets=5.5.0=pyhd8ed1ab_0
+typing_extensions=4.4.0=pyha770c72_0
+tzdata=2022d=h191b570_0
+tzlocal=4.2=py39h6e9494a_2
+unicodedata2=14.0.0=py39h63b48b0_1
+urllib3=1.26.11=pyhd8ed1ab_0
+utf8proc=2.6.1=h9ed2024_0
+validators=0.18.2=pyhd3deb0d_0
+watchdog=2.2.0=py39h82e4197_0
+wcwidth=0.2.5=pyh9f0ad1d_2
+webencodings=0.5.1=py_1
+websocket-client=1.4.1=pyhd8ed1ab_0
+wheel=0.37.1=pyhd8ed1ab_0
+widgetsnbextension=4.0.4=pyhd8ed1ab_0
+xorg-libxau=1.0.9=h35c211d_0
+xorg-libxdmcp=1.1.3=h35c211d_0
+xz=5.2.6=h775f41a_0
+yaml=0.2.5=h0d85af4_2
+zeromq=4.3.4=he49afe7_1
+zipp=3.9.0=pyhd8ed1ab_0
+zlib=1.2.13=hfd90126_4
+zstd=1.5.2=hfa58983_4
