--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==4.2.0
 attrs==22.2.0
 blinker==1.5
+Boruta==0.3
 cachetools==5.2.1
 certifi==2022.6.15
 charset-normalizer==3.0.1
@@ -13,11 +14,12 @@ GitPython==3.1.30
 idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.17.3
 MarkupSafe==2.1.1
 mordred==1.2.0
 networkx==2.8.8
-numpy==1.24.1
+numpy==1.23.3
 packaging==23.0
 pandas==1.5.2
 Pillow==9.4.0
@@ -34,11 +36,14 @@ pytz-deprecation-shim==0.1.0.post0
 rdkit==2022.9.3
 requests==2.28.2
 rich==13.1.0
+scikit-learn==1.2.0
+scipy==1.10.0
 semver==2.13.0
 setuptools==65.6.3
 six==1.16.0
 smmap==5.0.0
 streamlit==1.17.0
+threadpoolctl==3.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
