--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,11 @@ certifi==2022.6.15
 charset-normalizer==3.0.1
 click==8.1.3
 commonmark==0.9.1
+contourpy==1.0.7
+cycler==0.11.0
 decorator==5.1.1
 entrypoints==0.4
+fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.30
 idna==3.4
@@ -16,7 +19,9 @@ importlib-metadata==6.0.0
 Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.3
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.3
 mordred==1.2.0
 networkx==2.8.8
 numpy==1.23.3
@@ -29,6 +34,7 @@ pyarrow==10.0.1
 pydeck==0.8.0
 Pygments==2.14.0
 Pympler==1.0.1
+pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.7.1
@@ -38,6 +44,7 @@ requests==2.28.2
 rich==13.1.0
 scikit-learn==1.2.0
 scipy==1.10.0
+seaborn==0.12.2
 semver==2.13.0
 setuptools==65.6.3
 six==1.16.0
