--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,14 @@ click==8.1.3
 commonmark==0.9.1
 contourpy==1.0.7
 cycler==0.11.0
+Cython==0.29.33
 decorator==5.1.1
 entrypoints==0.4
 fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.30
+GPy==1.10.0
+GPyOpt==1.2.6
 idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
@@ -28,6 +31,7 @@ networkx==2.8.8
 numpy==1.23.3
 packaging==23.0
 pandas==1.5.2
+paramz==0.9.5
 Pillow==9.4.0
 pip==22.1.2
 protobuf==3.20.3
